examples/compiler_errors/adversarial/common_dev_mistakes/CollectionsConfusion.flx
module CollectionsConfusion {
    fn sum(xs: List<Int>) -> Int {
        len(xs)
    }

    fn bad() -> Int {
        sum([|1, 2, 3|])
    }
}
